@@ -28,7 +28,7 @@ it under the terms of the one of three licenses as you choose:
 #define LIBRAW_PATCH_VERSION  0
 #define LIBRAW_VERSION_TAIL   Release
 
-#define LIBRAW_SHLIB_CURRENT  	4
+#define LIBRAW_SHLIB_CURRENT  	5
 #define LIBRAW_SHLIB_REVISION 	0
 #define LIBRAW_SHLIB_AGE     	0
 
